--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ES2020",
         "module": "CommonJS",
         "outDir": "dist",
         "rootDir": "src",
-        "strict": true
+        "strict": true,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "types": ["node"],
+        "lib": ["ES2020"]
     }
 }
